--- a/css/gs.css
+++ b/css/gs.css
@@ -1,32 +1,34 @@
-/* line 4, ../sass/gs.scss */
-.clearfix {
-  display: inline;
-  height: 1%;
-  display: block;
-}
-/* line 9, ../sass/gs.scss */
-.clearfix:after {
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
-}
-
-/* line 25, ../sass/gs.scss */
+/* line 23, ../sass/gs.scss */
 .container {
-  width: 1000px;
+  width: 990px;
 }
 
-@media only screen and (max-width: 1000px) {
-  /* line 29, ../sass/gs.scss */
+@media only screen and (max-width: 990px) {
+  /* line 27, ../sass/gs.scss */
   .container {
     width: 100%;
   }
 }
-/* line 34, ../sass/gs.scss */
+/* line 31, ../sass/gs.scss */
+.row {
+  display: block;
+  width: 100%;
+  margin: 0px 15px;
+  *zoom: 1;
+}
+/* line 6, ../sass/gs.scss */
+.row:before, .row:after {
+  content: "";
+  display: table;
+}
+/* line 10, ../sass/gs.scss */
+.row:after {
+  clear: both;
+}
+
+/* line 38, ../sass/gs.scss */
 .col {
   display: table;
-  padding: 0px 20px;
+  padding: 0px 15px;
   float: left;
 }
