--- a/sass/gs.scss
+++ b/sass/gs.scss
@@ -1,40 +1,48 @@
-// studying sass
+// Clearfix
+@mixin clearfix() {
+	*zoom:1;
 
-// clearfix for float elements
-.clearfix {
-	display: inline;
-	height: 1%;
-	display: block;
-
-	&:after {     
-		content: ".";     
-		display: block;     
-		height: 0;     
-		clear: both;     
-		visibility: hidden;
-	} 
-} 
+	&:before,
+	&:after {
+	    content:"";
+	    display:table;
+	}
+	&:after {
+	    clear:both;
+	}
+}
 
 // grid system actually starts here
 
 // column size 
+$col-size-g10: 10%;
 $col-size-g12: 8.33333333%;
 $col-size-g16: 6.25%;
 
 // global grid rules
 .container {
-	width: 1000px;
+	width: 990px;
 }
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 990px) {
 	.container {
 		width: 100%;
 	}
 }
+.row {
+	display: block;
+	width: 100%;
+	margin: 0px 15px;
+	@include clearfix();
+}
 
 .col {
 	display: table;
-	padding: 0px 20px;
+	padding: 0px 15px;
 	float: left;
+}
+
+@function col-size-g10($n) {
+	@return $n * $col-size-g10;
 }
 
 @function col-size-g12($n) {
